# K-E-Corrections

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  astropy-cosmology.ipynb  ke_corrections_rescaled.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: testing-and-coverage.yml
docs/: conf.py  index.rst  notebooks.rst
docs/notebooks/: plots.ipynb
src/k_e_corrections/: __init__.py  corrections.py
tests/k_e_corrections/: test_corrections.py
